kubernetes/framework-benchmark/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: framework-benchmark
    app.kubernetes.io/name: locust
    component: worker
  name: framework-benchmark-worker
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: framework-benchmark
      app.kubernetes.io/name: locust
      component: worker
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: framework-benchmark
        app.kubernetes.io/name: locust
        component: worker
    spec:
      nodeSelector:
        "benchmark": "benchmark"
      tolerations:
      - key: "benchmark"
        operator: "Equal"
        value: "benchmark"
        effect: "NoSchedule"
      containers:
      - args:
        - --worker
        command:
        - sh
        - /config/docker-entrypoint.sh
        image: locustio/locust:2.15.1
        imagePullPolicy: IfNotPresent
        name: locust
        resources:
          limits:
            memory: 30Gi
          requests:
            cpu: 1000m
            memory: 1Gi
        volumeMounts:
        - mountPath: /mnt/locust
          name: locustfile
        - mountPath: /config
          name: config
      restartPolicy: Always
      securityContext: {}
      volumes:
      - configMap:
          name: example-lib
        name: lib
      - configMap:
          name: framework-benchmark-file
        name: locustfile
      - configMap:
          name: framework-benchmark-config
        name: config
