kubernetes/framework-benchmark/master-ingress.yaml
---
# Source: locust/templates/master-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: framework-benchmark
  labels:
    app.kubernetes.io/name: locust
    app.kubernetes.io/instance: framework-benchmark
spec:
  ingressClassName: nginx
  rules:
    - host: "locust.manjusaka.me"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: framework-benchmark
                port:
                  number: 80
